# insert-dylib

./: .gitignore  Cargo.toml  LICENSE  README.cn.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/classic-tight-headerpad-case/: README.md
examples/classic-tight-headerpad-case/calc/: calc.c
examples/classic-tight-headerpad-case/hook/: Cargo.toml
examples/classic-tight-headerpad-case/hook/src/: lib.rs
src/: main.rs
